--- a/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
+++ b/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
@@ -190,7 +190,7 @@ footer {
 <body>
 
 <header>
-  <h1>Basics ROS2 (Python)</h1>
+  <h1>Basic Wheeled Robots</h1>
   <nav>
     <a href="../../lessons.html">← Back to Lessons</a>
     <a href="../../index.html">  Home</a>
