--- a/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
+++ b/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
@@ -201,7 +201,7 @@ footer {
   <!-- Sidebar -->
   <div class="sidebar">
     <h3>Lesson Menu</h3>
-    <a href="lesson1.html">Lesson 1: Introduction to ROS2</a>
+    <a href="lesson1.html">Lesson 1: Introduction to Wheeled robots</a>
     <a href="lesson/lesson2.html">Lesson 2: Installing ROS2</a>
     <a href="#lesson3">Lesson 3: Creating a ROS2 Workspace</a>
     <a href="#lesson4">Lesson 4: ROS2 Nodes</a>
