--- a/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
+++ b/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
@@ -192,8 +192,8 @@ footer {
 <header>
   <h1>Basic Wheeled Robots</h1>
   <nav>
-    <a href="../../lessons.html">← Back to Lessons</a>
-    <a href="../../index.html">  Home</a>
+    <a href="../../../lessons.html">← Back to Lessons</a>
+    <a href="../../../index.html">  Home</a>
   </nav>
 </header>
 
