--- a/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
+++ b/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
@@ -201,7 +201,7 @@ footer {
   <!-- Sidebar -->
   <div class="sidebar">
     <h3>Lesson Menu</h3>
-    <a href="lesson1.html">Lesson 1: Introduction to Wheeled robots</a>
+    <a href="lesson1.html">Lesson 1: Introduction to Wheeled Robots</a>
     <a href="lesson/lesson2.html">Lesson 2: Installing ROS2</a>
     <a href="#lesson3">Lesson 3: Creating a ROS2 Workspace</a>
     <a href="#lesson4">Lesson 4: ROS2 Nodes</a>
@@ -218,7 +218,7 @@ footer {
   <!-- Content -->
   <div class="content">
     <section id="lesson1">
-      <h2>Lesson 1: Introduction to ROS2</h2>
+      <h2>Lesson 1: Introduction to Wheeled Robots</h2>
       <p>What is ROS2, why it is important in robotics, and the differences from ROS1. See examples of where ROS2 is used (drones, mobile robots, autonomous vehicles).</p>
     </section>
 
