--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
-    flex-wrap: wrap; /* allow wrapping on small screens */
+    flex-wrap: wrap; 
   }
   header h1 {
     margin: 0;
@@ -48,7 +48,7 @@
     color: #ffcc00;
   }
 
-  /* Hero Section */
+
   .hero {
     text-align: center;
     padding: 4rem 2rem;
