--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
-    flex-wrap: wrap; /* allow wrapping on small screens */
+    flex-wrap: wrap; 
   }
 
   header h1 {
@@ -123,7 +123,7 @@
     margin-top: 60px;
   }
 
-  /* ✅ RESPONSIVE DESIGN */
+
   @media (max-width: 768px) {
     header {
       flex-direction: column;
