--- a/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
+++ b/lesson/Robotics/Basic Wheeled Robots/basic_wheeled_robots_main.html
@@ -202,17 +202,11 @@ footer {
   <div class="sidebar">
     <h3>Lesson Menu</h3>
     <a href="lesson1.html">Lesson 1: Introduction to Wheeled Robots</a>
-    <a href="lesson/lesson2.html">Lesson 2: Installing ROS2</a>
-    <a href="#lesson3">Lesson 3: Creating a ROS2 Workspace</a>
-    <a href="#lesson4">Lesson 4: ROS2 Nodes</a>
-    <a href="#lesson5">Lesson 5: Topics - Publish and Subscribe</a>
-    <a href="#lesson6">Lesson 6: Services</a>
-    <a href="#lesson7">Lesson 7: Actions (Basics)</a>
-    <a href="#lesson8">Lesson 8: Parameters</a>
-    <a href="#lesson9">Lesson 9: ROS2 Command-Line Tools</a>
-    <a href="#lesson10">Lesson 10: Visualizing with RVIZ2</a>
-    <a href="#lesson11">Lesson 11: Launch Files</a>
-    <a href="#lesson12">Lesson 12: Recording and Replaying Data</a>
+    <a href="lesson2.html">Lesson 2: Kinematic Model</a>
+    <a href="#lesson3">Lesson 3: Motion Behavior</a>
+    <a href="#lesson4">Lesson 4: Odometry</a>
+    <a href="#lesson5">Lesson 5: Application</a>
+    <a href="#lesson6">Lesson 6: Simulation Example</a>
   </div>
 
   <!-- Content -->
@@ -223,64 +217,34 @@ footer {
     </section>
 
     <section id="lesson2">
-      <h2>Lesson 2: Installing ROS2</h2>
+      <h2>Lesson 2: Kinematic Model</h2>
       <p>Step-by-step setup of ROS2 Humble on Ubuntu. Configure your environment and test your installation with basic commands.</p>
 
       
     </section>
 
     <section id="lesson3">
-      <h2>Lesson 3: Creating a ROS2 Workspace</h2>
+      <h2>Lesson 3: Motion Behavior</h2>
       <p>Learn how to create a workspace, build packages with <code>colcon build</code>, and understand the ROS2 project structure.</p>
 
     </section>
 
     <section id="lesson4">
-      <h2>Lesson 4: ROS2 Nodes</h2>
+      <h2>Lesson 4: Odometry</h2>
       <p>Understand what nodes are and how they form the building blocks of ROS2. Write a simple node in Python to print a message.</p>
     </section>
 
     <section id="lesson5">
-      <h2>Lesson 5: Topics - Publish and Subscribe</h2>
+      <h2>Lesson 5: Applicaion</h2>
       <p>Learn how data is exchanged in ROS2 using topics. Write a publisher that sends messages and a subscriber that listens to them.</p>
     </section>
 
     <section id="lesson6">
-      <h2>Lesson 6: Services</h2>
+      <h2>Lesson 6: Simulation Example</h2>
       <p>Understand the request/response communication style with services. Build a simple service server and a client in Python.</p>
     </section>
 
-    <section id="lesson7">
-      <h2>Lesson 7: Actions (Basics)</h2>
-      <p>Get an introduction to actions, which handle long-running tasks (e.g., moving a robot to a point). Run a simple example to understand how they differ from services.</p>
-    </section>
-
-    <section id="lesson8">
-      <h2>Lesson 8: Parameters</h2>
-      <p>Learn how to configure nodes dynamically using parameters. Practice setting and changing parameters from the command line.</p>
-
-    </section>
-
-    <section id="lesson9">
-      <h2>Lesson 9: ROS2 Command-Line Tools</h2>
-      <p>Use essential CLI tools: <code>ros2 run</code>, <code>ros2 node list</code>, <code>ros2 topic echo</code>, <code>ros2 service call</code>, and <code>ros2 param get/set</code>.</p>
-    </section>
-
-    <section id="lesson10">
-      <h2>Lesson 10: Visualizing with RVIZ2</h2>
-      <p>Introduction to RViz2 for visualizing robot data. Learn to display messages, coordinate frames, and sensor data.</p>
-    </section>
-
-    <section id="lesson11">
-      <h2>Lesson 11: Launch Files</h2>
-      <p>Run multiple nodes at once using launch files. Write a basic launch file for your publisher and subscriber.</p>
-    </section>
-
-    <section id="lesson12">
-      <h2>Lesson 12: Recording and Replaying Data</h2>
-      <p>Record data from topics using <code>ros2 bag record</code> and replay it for testing.</p>
-
-    </section>
+   
 
 
     <!-- Premium / Ad Box -->
