--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
     color: #000000;
   }
 
+  /* footer {
+    text-align: center;
+    padding: 20px;
+    background: #a20e20;
+    color: white;
+    font-size: 0.9rem;
+    margin-top: 60px;
+  } */
+
+
   footer {
     text-align: center;
     padding: 20px;
@@ -122,6 +132,23 @@
     font-size: 0.9rem;
     margin-top: 60px;
   }
+
+  .footer-links {
+    margin-bottom: 10px;
+  }
+
+  .footer-links a {
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 10px;
+    font-weight: 500;
+    transition: color 0.3s;
+  }
+
+  .footer-links a:hover {
+    color: #ffcc00;
+  }
+
 
 
   @media (max-width: 768px) {
@@ -200,8 +227,16 @@
     </div>
   </section>
 
+  <!-- <footer>
+    <p>&copy; 2025 Robotics Academy</p>
+  </footer> -->
   <footer>
+    <div class="footer-links">
+      <a href="contact.html">Contact Us</a>
+      <a href="lessons.html">Lessons</a>
+    </div>
     <p>&copy; 2025 Robotics Academy</p>
   </footer>
+
 </body>
 </html>
