--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
     <div class="footer-section">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="index.html">🏠 Home</a></li>
-        <li><a href="lessons.html">📘 Lessons</a></li>
-        <li><a href="membership.html">💎 Get Premium</a></li>
-        <li><a href="contact.html">📩 Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="lessons.html">Lessons</a></li>
+        <li><a href="membership.html">Get Premium</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
@@ -307,9 +307,9 @@
       <p>Email: <a href="mailto:info@roboticsacademy.com">info@roboticsacademy.com</a></p>
       <p>Location: Phnom Penh, Cambodia</p>
       <p>Follow us:
-        <a href="#" class="social">🌐</a>
-        <a href="#" class="social">🐦</a>
-        <a href="#" class="social">📺</a>
+        <a href="#" class="social"></a>
+        <a href="#" class="social"></a>
+        <a href="#" class="social"></a>
       </p>
     </div>
 
@@ -320,7 +320,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p>&copy; 2025 Robotics Academy | Built with ❤️ for future roboticists</p>
+    <p>&copy; 2025 Robotics Academy</p>
   </div>
 </footer>
 
