--- a/lessons.html
+++ b/lessons.html
@@ -132,16 +132,92 @@
     background: #e67e22;
   }
 
+/*=============*/
   footer {
-    text-align: center;
-    padding: 20px;
-    background: #a20e20;
-    color: white;
-    font-size: 0.9rem;
-    margin-top: 60px;
-  }
+  background: #a20e20;
+  color: #fff;
+  padding: 40px 20px 20px;
+  margin-top: 60px;
+  font-size: 0.95rem;
+}
 
-  /* ✅ Responsive Design */
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 2rem;
+  max-width: 1100px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.footer-section {
+  flex: 1;
+  min-width: 250px;
+}
+
+.footer-section h3 {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid #ffcc00;
+  display: inline-block;
+  padding-bottom: 4px;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin-bottom: 0.6rem;
+}
+
+.footer-section a {
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.footer-section a:hover {
+  color: #ffcc00;
+}
+
+.footer-section p {
+  margin: 0.4rem 0;
+}
+
+.social {
+  margin-left: 6px;
+  font-size: 1.1rem;
+  transition: transform 0.3s;
+}
+
+.social:hover {
+  transform: scale(1.2);
+  color: #ffcc00;
+}
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 30px;
+  padding-top: 15px;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  font-size: 0.9rem;
+}
+
+@media (max-width: 768px) {
+  .footer-container {
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-section h3 {
+    border: none;
+  }
+}
+/*=============*/
+
+
   @media (max-width: 768px) {
     header {
       flex-direction: column;
@@ -328,8 +404,39 @@
     </div>
   </section>
 
+<!------>
   <footer>
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="lessons.html">Lessons</a></li>
+        <li><a href="membership.html">Get Premium</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h3>Contact Us</h3>
+      <p>Email: <a href="mailto:info@roboticsacademy.com">info@roboticsacademy.com</a></p>
+      <p>Location: Phnom Penh, Cambodia</p>
+      <p>Follow us:
+        <a href="#" class="social"></a>
+        <a href="#" class="social"></a>
+        <a href="#" class="social"></a>
+      </p>
+    </div>
+
+    <div class="footer-section">
+      <h3>About</h3>
+      <p>Empowering learners worldwide to master Robotics, ROS, C++, and Control Systems through interactive lessons and hands-on projects.</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
     <p>&copy; 2025 Robotics Academy</p>
-  </footer>
+  </div>
+</footer>
 </body> 
 </html>
