--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
     <div class="footer-section">
       <h3>Contact Us</h3>
-      <p>Email: <a href="mailto:info@roboticsacademy.com">info@roboticsacademy.com</a></p>
+      <p>Email: <a href="mailto:chetsokhpanha@gmail.com">info@roboticsacademy.com</a></p>
       <p>Location: Phnom Penh, Cambodia</p>
       <p>Follow us:
         <a href="#" class="social"></a>
